--- a/public/src/view/template/editTasks_template.html
+++ b/public/src/view/template/editTasks_template.html
@@ -27,71 +27,41 @@
         </div>
       </div>
       <div class="task-right-info" ng-click="editFormVisibility = !editFormVisibility">
-
       </div>
-
-
     </div>
-    <form class="task-update-form" name="taskUpdateForm" ng-show="editFormVisibility">
+    <div class="specific-task-overlay" ng-show="taskOverlayVisibility">
+      <div class="specific-task-overlay-button delete-task-button" ng-click="deleteTask(task.propertymaintenanceid)">
+        DELETE
+      </div>
+      <div class="specific-task-overlay-button cancel-delete-task-button" ng-click="taskOverlayVisibility = !taskOverlayVisibility">
+        CANCEL
+      </div>
+    </div>
+    <edit-tasks-form ng-show="editFormVisibility" task="task" task-overlay-visibility="taskOverlayVisibility" edit-form-visibility="editFormVisibility"></edit-tasks-form>
+  </div>
+  <div class="add-new-task-container">
+    <form class="create-task-form" name="customTaskForm">
       Maintenance Name:<br>
-      <input type="text" ng-model="task.name"><br>
+      <input type="text" ng-model="newTask.name"><br>
       Start Date:<br>
-      <input type="date" ng-model="task.lastDate"><br>
+      <input type="date" ng-model="newTask.lastDate"><br>
       Interval:<br>
-      <select ng-model="task.season">
+      <select ng-model="newTask.season">
         <option value="Monthly">Monthly</option>
         <option value="Quarterly">Quarterly</option>
         <option value="Biannually">Biannually</option>
         <option value="Annually">Annually</option>
         <option value="Custom">Custom</option>
       </select><br>
-      <span class="custom-interval"  ng-show="task.season === 'Custom'">
+      <span class="custom-interval"  ng-show="newTask.season === 'Custom'">
         Days inbetween:<br>
-        <input type="number" ng-model="task.dayInterval">
-      </span>
+        <input type="number" ng-model="newTask.dayInterval">
+      </span><br>
       Outdoor:<br>
-      <input type="checkbox" ng-model="task.outdoor"><br>
+      <input type="checkbox" ng-model="newTask.outdoor"><br>
       Notes:<br>
-      <textarea ng-model="task.notes" rows="20"></textarea><br>
-      <input type="button" value="add" ng-click="editTask(propertyId,task)">
-    </form>
-  </div>
-  <div class="add-new-task-container">
-    <form class="create-task-form" name="customTaskForm">
-      Maintenance Name:
-      <input type="text" ng-model="task.name">
-      Start Date:
-      <input type="date" ng-model="task.lastDate">
-      Interval:
-      <select ng-model="task.season">
-        <option value="Monthly">Monthly</option>
-        <option value="Quarterly">Quarterly</option>
-        <option value="Biannually">Biannually</option>
-        <option value="Annually">Annually</option>
-        <option value="Custom">Custom</option>
-      </select>
-      <span class="custom-interval"  ng-show="task.season === 'Custom'">
-        Days inbetween:
-        <input type="number" ng-model="task.dayInterval">
-      </span>
-      Outdoor:
-      <input type="checkbox" ng-model="task.outdoor">
-      Notes:
-      <textarea ng-model="task.notes" rows="8" cols="40"></textarea>
-      <input type="button" value="add" ng-click="createTask(propertyId,task)">
+      <textarea ng-model="newTask.notes" rows="8" cols="40"></textarea><br>
+      <input type="button" value="add" ng-click="createTask(propertyId,newTask)">
     </form>
   </div>
 </div>
-<!-- propertymaintenanceid":168
-,"propertyid":90
-,"name":"Fertilize lawn "
-,"typeid":1
-,"dayinterval":365
-,"nextdate":"2017-03-15T06:00:00.000Z"
-,"lastdate":"2016-11-01T06:00:00.000Z"
-,"season":"Spring"
-,"outdoor":true
-,"notes":null
-,"alertid":null
-,"duedate":null
-,"createdate":null} -->
