--- a/public/src/view/template/editTasksForm_template.html
+++ b/public/src/view/template/editTasksForm_template.html
@@ -6,7 +6,7 @@
   Next Run Date:<br>
   <input type="date" ng-model="editTaskObj.nextDate"><br>
   Interval:<br>
-  <select ng-model="editTaskObj.season">
+  <select ng-model="task.season">
     <option value="Monthly">Monthly</option>
     <option value="Quarterly">Quarterly</option>
     <option value="Biannually">Biannually</option>
@@ -18,11 +18,11 @@
     <input type="number" ng-model="editTaskObj.dayInterval">
   </span>
   Outdoor:<br>
-  <input type="checkbox" ng-model="editTaskObj.outdoor"><br>
+  <input type="checkbox" ng-model="task.outdoor"><br>
   Notes:<br>
   <textarea ng-model="editTaskObj.notes" rows="20"></textarea><br>
   Deactivate:<br>
-  <input type="checkbox" ng-model="editTaskObj.inactive"><br>
-  <input type="button" value="Update" ng-click="editTask(editTaskObj)">
+  <input type="checkbox" ng-model="task.inactive"><br>
+  <input type="button" value="Update" ng-click="editTask(editTaskObj); editFormVisibility = !editFormVisibility">
   <input type="button" value="Delete" ng-click="taskOverlayVisibility = !taskOverlayVisibility; editFormVisibility = !editFormVisibility">
 </form>
