--- a/public/src/view/propertySettings.html
+++ b/public/src/view/propertySettings.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="main-container grey-background">
   <property-settings></property-settings>
   <hr>
   <edit-tasks></edit-tasks>
