setting up for styling

--- a/public/src/view/userSettings.html
+++ b/public/src/view/userSettings.html
@@ -1,5 +1,5 @@
 <section class="main-container">
-  <div class="">
+  <div class="userPic">
     <img ng-src="{{user.photo}}" alt="" />
     <img ng-if="!user.photo" src="https://lh3.googleusercontent.com/--KpygdWrSHs/Vpdq-UD5C0I/AAAAAAAAAuw/evoVPd2Isxw/w506-h750/AWESOME%2BFACEBOOK%2BPROFILE%2BPICTURES1.jpg" alt="" />
     <div class="">
