--- a/public/src/css/base/_base.scss
+++ b/public/src/css/base/_base.scss
@@ -1,4 +1,19 @@
 .main-container{
   margin-top: 10vh;
   font-family: $body-font;
+  background-color: lightgrey;
+  
 }
+
+
+// $boxHeight1:
+// $boxHeight2:
+// $boxHeight3:
+// $boxHeight4:
+// $boxHeight5:
+//
+// $fontSize1:
+// $fontSize2:
+// $fontSize3:
+// $fontSize4:
+// $fontSize5:
