--- a/public/src/view/properties.html
+++ b/public/src/view/properties.html
@@ -3,7 +3,7 @@
 
   <div class="prop" ng-repeat="prop in properties" ng-swipe-left="propDeleteButtonVisibility = true" ng-swipe-right="propDeleteButtonVisibility = false">
     <div class="prop-primary-box" ui-sref="mainAlerts({propertyId: prop.id})">
-      {{prop.name}} {{prop.zipcode}}
+      <span>{{prop.name}}</span> <span class="left-bracket"> < </span>
     </div>
     <div class="prop-delete-button" ng-show="propDeleteButtonVisibility" ng-click="propDeleteConfirmVisiblity = !propDeleteConfirmVisiblity; propDeleteButtonVisibility = !propDeleteButtonVisibility">
       <svg width="60px" height="60px">
@@ -19,14 +19,5 @@
   <div class="prop newProp" ui-sref="createProperty">
       + add new property
   </div>
-
-
-
-
-
-
-
-
-
 
 </section>
