--- a/public/src/view/template/editTasks_template.html
+++ b/public/src/view/template/editTasks_template.html
@@ -49,7 +49,10 @@
 
 
   <div class="add-new-task-container">
-    <form class="task-update-form" name="customTaskForm">
+    <div class="add-new-task-toggler" ng-click="addFormVisibility = !addFormVisibility">
+      + Add New Reminder
+    </div>
+    <form class="task-update-form" name="customTaskForm" ng-show="addFormVisibility">
       Maintenance Name:<br>
       <input type="text" ng-model="newTask.name" class="edit-task-form-input"><br>
       Start Date:<br>
