style on mainalerts page

--- a/public/src/css/base/_base.scss
+++ b/public/src/css/base/_base.scss
@@ -2,8 +2,18 @@
   margin-top: 10vh;
   font-family: $body-font;
 }
-
-
 body {
   background-color: $background;
 }
+///////Dorian//
+$boxHeight1: 10vh;
+// $boxHeight2:
+// $boxHeight3:
+// $boxHeight4:
+// $boxHeight5:
+//
+// $fontSize1:
+$fontSize2: 20px;
+$fontSize3: 32px;
+$fontSize4: 45px;
+$fontSize5: 59px;
