--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -13,10 +13,11 @@
     <div class="view-name">{{viewname}}</div>
   </div>
   <div ui-sref="home" class="logo-box">
-    <br>
-    hஇme
-    <!-- ᚻᛰᛖᛊ -->
-    <!-- h卍me -->
+    <div class="logo-box-text-holder">
+      hஇme
+      <!-- ᚻᛰᛖᛊ -->
+      <!-- h卍me -->
+    </div>
   </div>
 </section>
 
