--- a/public/src/view/template/propertyForm_template.html
+++ b/public/src/view/template/propertyForm_template.html
@@ -1,23 +1,32 @@
-<section class="main-container">
+<section class="main-container createPropertyInputs-container">
+  <div class="createPropertyInputs">
+    <form class="" action="" method="post">
+      <div class="createPropertyInputs-title">
+        Property Name:
+        <div class="createPropertyInputs-input">
+          <input class="input" ng-model="property.name" type="text" name="name" value=""></li>
+        </div>
+      </div>
 
-<div class="createPropertyInputs">
-<form class="" action="" method="post">
-  <ul> Create New Property <br>
-    <li><br>Property Name <br>
-      <input class="input" ng-model="property.name" type="text" name="name" value=""></li> <br>
 
-    <li>ZipCode <br>
-      <input class="input" ng-model="property.zipcode" type="number" name="name" value=""></li> <br>
+      <div class="createPropertyInputs-title">
+        ZipCode:
+        <div class="createPropertyInputs-input">
+          <input class="input" ng-model="property.zipcode" type="number" name="name" value=""></li>
+        </div>
+      </div>
 
-    <!-- <li>Type <br>
-      <select ng-model="property.typeId" name="type_id">
-        <option value="1">Anything</option>
-        <option value="2">House</option>
-        <option value="3">Apartment</option>
-      </select>
-    </li> -->
-  </ul>
-  <input   ng-click="send(property)" type="button" name="name" value="next">
-</form>
+        <!--Type
+          <select ng-model="property.typeId" name="type_id">
+            <option value="1">Anything</option>
+            <option value="2">House</option>
+            <option value="3">Apartment</option>
+          </select>
+         -->
+         <div class="createPropertyInputs-submit">
+           <input ng-click="send(property)" type="button" name="name" value="next">
+         </div>
+
+      </form>
+  </div>
 </section>
-</div>
