--- a/public/src/css/styles/_mainAlerts.scss
+++ b/public/src/css/styles/_mainAlerts.scss
@@ -16,10 +16,6 @@
 .img-size{
   max-width: 5vh;
 }
-.redAlert {
-  background-color: #ff5a5f;
-}
-
 .alerts-container {
   margin-top: 80px;
 }
@@ -98,4 +94,10 @@
 }
 .checkbox-wrap{
   padding-right: 60px;
+}
+.snooze{
+  margin-right: 60px;
+}
+.redAlert {
+  background-color: #ff5a5f;
 }
